@@ -1,7 +1,15 @@
-import java.util.Objects;
-
 public class Star extends CelestialObject {
     private double magnitude;
+
+    public Star() {
+        super("Soleil", 0.0, 0.0, 0.0, 0);
+        this.magnitude = 0.0;
+    }
+
+    public Star(String name, double x, double y, double z, double magnitude, int mass) {
+        super(name, x, y, z, mass);
+        this.magnitude = magnitude;
+    }
 
     public double getMagnitude() {
         return magnitude;
@@ -11,38 +19,23 @@ public class Star extends CelestialObject {
         this.magnitude = magnitude;
     }
 
-    public Star() {
-        super();
-        this.magnitude = 0.0;
-        this.mass = 0;
-    }
-
-    public Star(String name, double x, double y, double z, double magnitude, int mass) {
-        super(name, x, y, z, mass);
-        this.magnitude = magnitude;
-        this.mass = mass;
-    }
-
     @Override
     public String toString() {
-        return "%s shines at the %.3f magnitude".formatted(getName(), this.magnitude);
+        return getName() + " shines at the " + String.format("%.3f", magnitude) + " magnitude";
     }
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj)
-            return true;
-        if (!(obj instanceof Star))
-            return false;
         if (!super.equals(obj))
             return false;
-
+        if (!(obj instanceof Star))
+            return false;
         Star other = (Star) obj;
         return Double.compare(magnitude, other.magnitude) == 0;
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(name, x, y, z, magnitude);
+        return java.util.Objects.hash(super.hashCode(), magnitude);
     }
 }
